kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dijkstra-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-dijkstra-container
          image: aryanpatel111/dijkstra-shortest-path-finder
          ports:
            - containerPort: 8081
